--- a/css/style.css
+++ b/css/style.css
@@ -193,12 +193,33 @@ nav.global{
     background-color:var(--dark-color);
 }
 ul.pr-category{
-   width: 50%;
+   width: 55%;
    text-transform: uppercase;
    line-height:50px;
 }
+ul.pr-category>li{
+    position: relative;
+}
+ul.pr-category>li>ul.sub-cate{
+    position: absolute;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border: 1px solid rgb(222,226,230);
+    background: var(--white-color);
+    z-index: 100;
+    display: none;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    left: -10px;
+}
+ul.sub-cate>li{
+    padding: 0px 20px;
+    white-space: nowrap;
+    line-height: 30px;
+}
 ul.global-nav{
-    width: 30%;
+    width: 23%;
     text-transform: uppercase;
     line-height:50px;
 }
