--- a/css/style.css
+++ b/css/style.css
@@ -377,14 +377,42 @@ ul.global-nav{
 }
 
 /***************** LIST **************/
-.list-3,.list-4,.list-5{
+.listview{
     margin:0 20px;
 }
 .list-color{
     fill:var(--gray-color);
 }
+.listview:hover .list-color{
+    fill:var(--gray-dark-color)
+}
 .list-act-color{
     fill: var(--gray-dark-color);
+}
+.sort li:hover,
+.sort li.act{
+    background: #ddd;
+}
+.sort li:hover a,
+.sort li.act a{
+    font-weight: bold;
+}
+h5 span{
+    margin-left: 15px;
+}
+p.desc{
+    margin-bottom: 0.3rem;
+}
+p.price span{
+    margin-right: 1rem;
+}
+span.or{
+    text-decoration: line-through;
+}
+.price span:not(.or){
+    color:var(--dark-color);
+    font-weight: 600;
+    font-size: 0.9rem;
 }
 
 /***************** SERVICE **************/
