--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,15 @@ body{
     color: var(--primary-color);
     font-size:16px;
 }
+body::-webkit-scrollbar{
+    width: 8px;
+}
+body::-webkit-scrollbar-track{
+    background-color: pink;
+}
+body::-webkit-scrollbar-thumb{
+    background-color: #dd2a7b;
+}
 a,a:link{
     text-decoration:none;
     color:var(--primary-color);
@@ -12,7 +21,7 @@ a:hover{
 }
 .container-max{
     width: 1580px;
-    max-width:1440px;
+    max-width:100%;
     padding-left:80px;
     padding-right:80px;
     margin-left:auto;
@@ -22,6 +31,25 @@ a:hover{
     .container, .container-lg, .container-md, .container-sm, .container-xl {
         max-width: 1440px;
     }
+}
+
+/***************** HEADER **************/
+header>.container-max>.row{
+    flex-flow: column nowrap;
+}
+header.fixed>.container-max>.row{
+    flex-flow: row nowrap;
+}
+header.fixed .brand{
+    order: 1;
+    font-size: 25px;
+    margin-top: 5px;
+    margin-right: 30px;
+    width: 300px;
+}
+header.fixed nav.top{
+    order: 2;
+    width: calc(100% - 300px);
 }
 
 /***************** TOP NAVIGATION **************/
@@ -174,6 +202,7 @@ input.search{
     margin-bottom:30px;
     font-family: 'Roboto Slab', serif;
     font-weight:400;
+    transition: all 300ms ease-in-out;
 }
 
 /***************** GLOBAL NAV **************/
@@ -197,7 +226,7 @@ nav.global{
 }
 .category-subnav{
     position: absolute;
-    width: 1310px;
+    width: 1450px;
     height: 600px;
     z-index: 101;
     background: #fff;
@@ -421,6 +450,58 @@ span.or{
     background: var(--dark-color);
     color: var(--white-color);
 }
+.service h4{
+    font-size: 13px;
+    font-weight: 700;
+}
+.service h4 span.tel{
+    font-size: 18px;
+    margin-left: 15px;
+    color: #f7b5d3;
+}
+.service h4 a.kakao{
+    font-weight: 300;
+    font-size: 18px;
+    margin-left: 10px;
+    color: rgb(255,255,0);
+    text-decoration: none;
+}
+.service h4 a.kakao:hover{
+    background: transparent;
+    color:#000;
+}
+p{
+    font-size: 13px;
+    font-weight: 300;
+}
+span.bank{
+    margin-right: 30px;
+    padding-bottom: 15px;
+    font-size: 13px;
+    font-weight: 300;
+    white-space: nowrap;
+}
+.bank-box{
+    margin-bottom: 20px;
+}
+.linebox{
+    border-left: 1px solid rgba(255,255,255,.3);
+    padding-left: 70px;
+    height: 100%;
+}
+.df-escrow-inicis{
+    cursor: pointer;
+    background: var(--gray-color);
+    padding: 20px;
+    border-radius: 10px;
+    display: inline-block;
+    line-height: 1rem;
+    color: #000;
+}
+.df-escrow-inicis p{
+    padding: 0;
+    margin: 0;
+}
 
 /***************** FOOTER **************/
 footer{
@@ -436,4 +517,215 @@ footer{
         max-width: 20%;
         padding:0 1rem;
     }
+}
+
+/***************** REMOTECONTROL **************/
+.remotecontrol{
+    position: fixed;
+    width: 50px;
+    border: 1px solid var(--gray-dark-color);
+    z-index: 9999;
+    bottom: 30px;
+    right: 0px;
+    font-size: 2em;
+    text-align: center;
+    line-height: 1.4;
+    background-color:rgba(255,255,255,.8)
+}
+.remotecontrol .news,
+.remotecontrol .hots{
+    font-size: 0.8em;
+    display: block;
+    font-style: italic;
+}
+
+/***************** LIST **************/
+.list01{
+    height: 500px;
+    background-color: #f7b5d3;
+}
+.list01>.container{
+    height: 100%;
+    padding-top: 100px;
+    background: url(../images/cup.png) no-repeat right center;
+    background-size: contain;
+}
+.list01>.container h4{
+    font-size: 30px;
+    color: #c56590;
+    font-weight: 300;
+}
+.list01>.container h1{
+    font-size: 80px;
+    letter-spacing: -5px;
+    color: #dd2a7b;
+    font-weight: 900;
+    line-height: 1;
+}
+.list01>.container p{
+    font-size: 20px;
+    color: rgba(0,0,0,.7);
+    font-weight: 500;
+    margin-top: 30px;
+    width: 800px;
+}
+.pgbox{
+    margin-top: 40px;
+    margin-bottom: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.pgbox i{
+    line-height: 1;
+}
+.pgbox .page-item.active .page-link{
+    background: #c56590;
+    border: #c56590;
+}
+.page-item .page-link{
+    color: var(--dark-color);
+}
+.page-item.disabled .page-link{
+    color: #ccc;
+}
+
+/***************** DETAIL **************/
+.breadcrumb{
+    background: transparent;
+}
+.img-box img{
+    width: 100%;
+}
+.img-thumb-box{
+    margin-top: 15px;
+    margin-bottom: 50px;
+}
+.img-thumb-box img{
+    height: 95px;
+    margin-right: 13px;
+    cursor: pointer;
+}
+.img-thumb-box img:last-child{
+    margin-right: 0;
+}
+.pr-list h1{
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 30px;
+}
+.pr-list h1 span{
+    font-size: 13px;
+    font-weight: 400;
+    margin-left: 8px;
+    text-transform: lowercase;
+    vertical-align: middle;
+}
+.pr-list p{
+    font-size: 15px;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+.pr-list h1 span:first-child{
+    margin-left: 30px;
+}
+.ul-pr-list{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border-top: 1px solid var(--gray-color);
+    padding-top: 15px;
+}
+.ul-pr-list li{
+    padding: 12px 0;
+    font-size: 14px;
+}
+.ul-pr-list li span{
+    color:#f1730b;
+    font-weight: 600;
+}
+.ul-pr-list li.line{
+    border-top: 1px solid var(--gray-color);
+}
+.title-label{
+    display: inline-block;
+    width: 120px;
+    font-weight: 600;
+}
+.colors input[type=radio]{
+    display: none;
+}
+.colors input[type=radio]+label{
+    display: inline-block;
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    margin-right: 20px;
+    position: relative;
+}
+.colors input[type=radio]:checked+label.black::after{
+    content: "black";
+    display: block;
+    position: absolute;
+    width: 50px;
+    top:25px;
+    left: -3px;
+}
+.colors input[type=radio]:checked+label.pink::after{
+    content: "pink";
+    display: block;
+    position: absolute;
+    width: 50px;
+    top:25px;
+    left: -3px;
+}
+.colors input[type=radio]:checked+label.navy::after{
+    content: "navy";
+    display: block;
+    position: absolute;
+    width: 50px;
+    top:25px;
+    left: -3px;
+}
+.colors input[type=radio]:checked+label.blue::after{
+    content: "blue";
+    display: block;
+    position: absolute;
+    width: 50px;
+    top:25px;
+    left: -3px;
+}
+.colors input[type=radio]:checked+label.beige::after{
+    content: "beige";
+    display: block;
+    position: absolute;
+    width: 50px;
+    top:25px;
+    left: -3px;
+}
+.black{
+    background-color: black;
+}
+.pink{
+    background-color: pink;
+}
+.navy{
+    background-color: navy;
+}
+.blue{
+    background-color: blue;
+}
+.beige{
+    background-color: beige;
+}
+p.selected{
+    margin-left: 120px;
+    margin-top: 5px;
+    margin-bottom: 0;
+    font-weight: 500;
+}
+select.size{
+    border: 1px solid var(--gray-color);
+    padding: 8px 10px;
+    width: 200px;
 }
