--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ header.fixed nav.top{
     border-radius:50%;
     text-align:center;
 }
+.global{
+    border-top: 1px solid var(--gray-color);
+    border-bottom: 1px solid var(--gray-color);
+}
 .mem{
       font-weight: 700;
 }
@@ -205,6 +209,7 @@ input.search{
     transition: all 300ms ease-in-out;
 }
 
+
 /***************** GLOBAL NAV **************/
 nav.global{
     box-shadow:0 10px 10px 0 rgba(0,0,0,0.05);
@@ -323,6 +328,36 @@ ul.global-nav{
     width: 23%;
     text-transform: uppercase;
     line-height:50px;
+}
+
+
+@media (max-width:768px) {
+    .container-max{
+        padding-left: 10px;
+        padding-right: 10px; 
+    }
+    .brand{
+        font-size: 25px;
+    }
+    .global{
+        border-top: none;
+    }
+    .pr-category,
+    .global-nav{
+        display: none;
+    }
+    .category{
+        margin-left: 5px;
+    }
+    .category i{
+        font-size: 25px;
+    }
+    .category-subnav{
+        flex-direction: column;
+    }
+    .category-subnav-view{
+        flex-direction: column;
+    }
 }
 
 /***************** HERO **************/
@@ -728,4 +763,61 @@ select.size{
     border: 1px solid var(--gray-color);
     padding: 8px 10px;
     width: 200px;
+}
+.add-opt{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.add-opt li{
+    padding: 10px 0;
+}
+.btn-outline-line{
+    color: #6c757d;
+    border-color: var(--gray-color);
+}
+.btn-outline-line:hover,
+.btn-outline-line:active{
+    background: var(--gray-color);
+}
+input[type=number].quantity{
+    height: calc(1.5em + 1rem + 2px);
+    width: 50px;
+    padding: 0.375rem 0.75rem;
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--dark-color);
+    border: 1px solid var(--gray-color);
+}
+.btn-detail{
+    display: block;
+    border: 1px solid var(--gray-dark-color);
+    margin-top: 50px;
+    width: 100%;
+    padding: 15px;
+    background-color: #fcedf3;
+    transition: all 300ms;
+}
+.btn-detail:hover,
+.btn-detail:active{
+    background-color: #fdd6e6;
+}
+.btn-line{
+    width: 48%;
+    display: inline-block;
+    border: 1px solid var(--gray-dark-color);
+    margin: 15px 0 50px 0 ;
+    padding: 15px;
+    transition: all 300ms;
+}
+.btn-line:hover,
+.btn-line:active{
+    background-color: #fdd6e6;
+}
+.btn-line.btn-left{
+    margin-right: 15px;
+}
+.btn-line.btn-right{
+    margin-left: 5px;
 }
