--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,9 @@ input.search{
 nav.global{
     box-shadow:0 10px 10px 0 rgba(0,0,0,0.05);
 }
+.category-parent{
+    position: relative;
+}
 .category{
     line-height:50px;
     display:block;
@@ -221,17 +224,19 @@ nav.global{
     width:50px;
     height:50px;
     text-align:center;
-    position: relative;
 }
-.category:hover{
+.category:hover,
+.category-act{
     background-color:var(--dark-color);
 }
-.category:hover>a{
+.category:hover>a,
+.category-act>a{
     color:var(--white-color);
 }
 .category-subnav{
     position: absolute;
     width: 1450px;
+    max-width: 100%;
     height: 600px;
     z-index: 101;
     background: #fff;
@@ -357,6 +362,17 @@ ul.global-nav{
     }
     .category-subnav-view{
         flex-direction: column;
+        width: 100%;
+    }
+    .category-subnav-view li{
+        width: 100%;
+    }
+    .global-nav-view{
+        width: 100%;
+    }
+    .category-subnav-view li a,
+    .global-nav-view a{
+        padding: 8px 10px;
     }
 }
 
@@ -367,6 +383,9 @@ ul.global-nav{
 .mySlick img{
     margin-left: auto;
     margin-right: auto;
+    object-fit: cover;
+    width: 100%;
+    height: 200px;
 }
 .slick-dots{
     bottom: 10px;
