cartview first works

--- a/css/style.css
+++ b/css/style.css
@@ -838,7 +838,8 @@ input[type=number].quantity{
 .btn-detail:active{
     background-color: #fdd6e6;
 }
-.btn-line{
+.btn-line.btn-left,
+.btn-line.btn-right{
     width: 48%;
     display: inline-block;
     border: 1px solid var(--gray-dark-color);
@@ -855,6 +856,15 @@ input[type=number].quantity{
 }
 .btn-line.btn-right{
     margin-left: 5px;
+}
+.btn.btn-sm-line{
+    display: inline-block;
+    border: 1px solid var(--gray-color);
+    background-color: #fcedf3;
+    font-size: 13px;
+    font-weight: 800;
+    margin-left: 4.5px;
+    margin-right: 4.5px;
 }
 .total-text p{
     margin: 0;
@@ -913,10 +923,81 @@ input[type=number].quantity{
     margin-top: 20px;
     margin-bottom: 40px;
 }
+.star.starin{
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
 .star i{
     font-size: 30px;
     margin: 5px;
     color: #ffb500;
+}
+.review-list .img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    margin-right: 10px;
+}
+.review-list .badge{
+    font-size: 16px;
+    display: inline-block;
+    margin-top: 10px;
+}
+
+/***************** REVIEW POPUP **************/
+.rp{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .6);
+    display: none;
+    z-index:1000;
+}
+.review-popup{
+    position:fixed;
+    width: 900px;
+    height: 550px;
+    background: #fff;
+    top: 200px;
+    left:calc(50% - 450px);
+    padding: 20px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,.2),
+                0 0 15px 0 rgba(0,0,0,.15);
+}
+.rp-close{
+    font-size: 4em;
+    position: absolute;
+    right: 400px;
+    top: 100px;
+    cursor: pointer;
+}
+.review-popup .imgbox{
+    width: 53%;
+}
+.review-popup .imgbox img{
+    max-width: 100%;
+}
+.review-popup .rvbox,
+.review-popup .pdbox{
+    width: 30%;
+}
+ul.pddetail{
+    list-style: none;
+    padding: 0;
+}
+ul.pddetail li{
+    padding: 8px 20px;
+}
+ul.pddetail label{
+    font-weight: 700;
+    padding-right: 15px;
+}
+ul.pddetail .pdtitle{
+    font-weight: 600;
 }
 .shop-contents p.score{
     font-size: 50px;
@@ -993,3 +1074,89 @@ input[type=number].quantity{
     width: 150px;
     height: 150px;
 }
+
+/***************** CART **************/
+.cartview{
+    position: fixed;
+    width: 250px;
+    max-height: 420px;
+    overflow-y: auto;
+    text-align:center;
+    top:230px;
+    right: 10px;
+    background: #fff;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,.1),
+                0 0 15px 0 rgba(0,0,0,.09);
+    padding: 20px;
+    display: none;
+}
+.cartview::-webkit-scrollbar{
+    width: 8px;
+}
+.cartview::-webkit-scrollbar-track{
+    background-color: rgb(250,220,225);
+}
+.cartview::-webkit-scrollbar-thumb{
+    background-color: rgb(216,113,130);
+}
+.cartview img{
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+    margin-right: 10px;
+}
+.cartin{
+    text-align: center;
+    margin-bottom: 10px;
+}
+.cart-txt{
+    width: calc(100% - 80px);
+    
+}
+.cartview .d-flex{
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px dashed rgba(0,0,0,.3);
+}
+.cart-txt h1{
+    text-align: left;
+    font-size: 13px;
+}
+.cart-txt p{
+    text-align: left;
+    font-size: 12px;
+}
+.c-money{
+    font-size: 12px;
+    font-weight: 600;
+    text-align: right;
+}
+.c-money span{
+    color:#999;
+    font-weight: 300;
+    margin-right: 10px;
+}
+.c-money span::before{
+    content: "수량:";
+}
+.cartview-close{
+    position: absolute;
+    top:0px;
+    right: 0px;
+    font-size: 20px;
+    color: var(--gray-dark-color);
+    cursor: pointer;
+    transition: all 300ms;
+}
+.cartview-close:hover{
+    color:var(--dark-color);
+}
+
+/***************** QnA **************/
+table>thead>tr>th{
+    font-size: 1em;
+}
+table>tbody>tr>td{
+    font-size: 14px;
+}
+
